--- a/templates/aboutAPI.html
+++ b/templates/aboutAPI.html
@@ -10,8 +10,6 @@
       text-align: center;
     }
 
-  
-
     .container {
       width: 500px;
       margin: 100px auto;
@@ -27,26 +25,14 @@
     .quote {
       margin-top: 20px;
       font-size: 18px;
+      line-height: 1.4;
     }
 
-    .quote-button {
-            background-color: #00ff00;
-            border: none;
-            color: #000000;
-            font-size: 24px;
-            padding: 10px 20px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            margin-top: 20px;
-            cursor: pointer;
-            border-radius: 5px;
-        }
+    .author {
+      margin-top: 10px;
+      font-size: 14px;
+    }
 
-        .quote-button:hover {
-            background-color: #ff0000;
-            color: #000000;
-        }
     .refresh {
       margin-top: 20px;
       cursor: pointer;
@@ -77,13 +63,37 @@
       transform-origin: top center;
       transform: translateX(-50%) rotate(-45deg);
     }
+    .quote-button {
+            background-color: #00ff00;
+            border: none;
+            color: #000000;
+            font-size: 24px;
+            padding: 10px 20px;
+            text-align: center;
+            text-decoration: none;
+            display: inline-block;
+            margin-top: 20px;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+        .quote-button:hover {
+            background-color: #ff0000;
+            color: #000000;
+        }
   </style>
   <script>
     function getQuote() {
       fetch('/api/quote')
         .then(response => response.json())
         .then(data => {
-          document.getElementById('quote').textContent = data.quote;
+          const quote = data.quote.Quote;
+          const author = data.quote.Author;
+
+          const quoteElement = document.getElementById('quote');
+          const authorElement = document.getElementById('author');
+
+          quoteElement.textContent = quote;
+          authorElement.textContent = `- ${author}`;
         })
         .catch(error => {
           console.error('Error:', error);
@@ -107,6 +117,7 @@
         <a href="/api/quote" class="quote-button">Take the Red Pill</a>
     </div>
     <div class="quote" id="quote"></div>
+    <div class="author" id="author"></div>
     <div class="refresh" onclick="refreshQuote()"></div>
   </div>
 </body>
