redirection work completed

--- a/templates/aboutAPI.html
+++ b/templates/aboutAPI.html
@@ -216,7 +216,7 @@
     <div class="document-folder">
       <div class="document-folder-header"></div>
       <div class="document-folder-content">
-        <a href="/api/docs" class="document-folder-link">Swagger UI Documentation</a>
+        <a href="/docs" class="document-folder-link">Swagger Documentation</a>
       </div>
     </div>
   </div>
