--- a/templates/aboutAPI.html
+++ b/templates/aboutAPI.html
@@ -176,8 +176,8 @@
 </head>
 <body>
   <div class="container">
-    <h1>Welcome to the Matrix Quote App API!</h1>
-    <p>Escape the simulation and get your dose of quotes from the Matrix.</p>
+    <h1>Welcome to the Quote App API!</h1>
+    <p>Escape the simulation and get your dose of quotes of daily quotes.</p>
     <div class="container">
         <a href="/api/quote" class="quote-button">Take the Red Pill</a>
         <div class="document-folder-content">
